[package]
name = "tokengator-minter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokengator_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.3"
spl-token-group-interface = "0.2.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"
