[package]
name = "tokengator-minter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokengator_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "https://github.com/bridgesplit/anchor.git", features = ["token_2022_extensions", "token_2022"] }
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
wen_new_standard = { path = "../wen_new_standard", features = ["cpi"] }
spl-token-metadata-interface = "0.3.3"
spl-token-group-interface = "0.2.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"
